# vector-otel-repro

./: Cargo.toml  README.md  test_server.py  vector.toml
src/: main.rs
